Improve styling [fix border layout issues]

--- a/app/skins/80s/80s.css
+++ b/app/skins/80s/80s.css
@@ -47,7 +47,7 @@ Text,
     -fx-background-insets:  0;
     -fx-border-insets: 0 -1 0 -1;
     -fx-border-width: 1;
-    -fx-border-color: linear-gradient(from 0% 0% to 100% 100%, transparent 0%, rgba(0,255,255,0.3) 50%, transparent 100%);
+    -fx-border-color: linear-gradient(from 0% 100% to 100% 100%, transparent 0%, rgba(0,255,255,0.3) 50%, transparent 100%);
 }
 .list-view:focused > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:selected,
 .tree-view:focused > .virtual-flow > .clipped-container > .sheet > .tree-cell:filled:selected,
@@ -55,13 +55,13 @@ Text,
 .tree-table-view:focused > .virtual-flow > .clipped-container > .sheet > .tree-table-row-cell:filled:selected,
 .table-view:focused > .virtual-flow > .clipped-container > .sheet > .table-row-cell .table-cell:selected,
 .tree-table-view:focused > .virtual-flow > .clipped-container > .sheet > .tree-table-row-cell .tree-table-cell:selected {
-    -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, transparent 0%, rgba(0,0,255,0.2) 50%, transparent 100%),
-                          linear-gradient(from 0% 0% to 100% 100%, transparent 0%, rgba(255,0,0,0.2) 50%, transparent 100%);
+    -fx-background-color: linear-gradient(from 0% 100% to 100% 100%, transparent 0%, rgba(0,0,255,0.2) 50%, transparent 100%),
+                          linear-gradient(from 0% 100% to 100% 100%, transparent 0%, rgba(255,0,0,0.2) 50%, transparent 100%);
     -fx-background-insets:  0  0  0  0,
                            -5 -5 +5 +5;
     -fx-border-insets: 0 -1 0 -1;
     -fx-border-width: 1;
-    -fx-border-color: linear-gradient(from 0% 0% to 100% 100%, transparent 0%, rgba(0,255,255,0.3) 50%, transparent 100%);
+    -fx-border-color: linear-gradient(from 0% 100% to 100% 100%, transparent 0%, rgba(0,255,255,0.3) 50%, transparent 100%);
 }
 .combo-box > .list-cell,
 .combo-box:editable > .list-cell,
