--- a/app/skins/Flow/Flow.css
+++ b/app/skins/Flow/Flow.css
@@ -122,7 +122,7 @@
     -fx-background-color: transparent-nct;
     -fx-border-insets: 0 -1 0 -1;
     -fx-border-width: 1;
-    -fx-border-color: linear-gradient(from 0% 0% to 100% 100%, transparent 0%, rgba(0,255,255,0.3) 50%, transparent 100%);
+    -fx-border-color: linear-gradient(from 0% 100% to 100% 100%, transparent 0%, rgba(0,255,255,0.3) 50%, transparent 100%);
 }
 .list-view:focused > .virtual-flow > .clipped-container > .sheet > .list-cell:filled:selected,
 .tree-view:focused > .virtual-flow > .clipped-container > .sheet > .tree-cell:filled:selected,
@@ -130,10 +130,10 @@
 .tree-table-view:focused > .virtual-flow > .clipped-container > .sheet > .tree-table-row-cell:filled:selected,
 .table-view:focused > .virtual-flow > .clipped-container > .sheet > .table-row-cell .table-cell:selected,
 .tree-table-view:focused > .virtual-flow > .clipped-container > .sheet > .tree-table-row-cell .tree-table-cell:selected {
-    -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, transparent 0%, -skin-color-darker 50%, transparent 100%);
+    -fx-background-color: transparent-nct;
     -fx-border-insets: 0 -1 0 -1;
     -fx-border-width: 1;
-    -fx-border-color: linear-gradient(from 0% 0% to 100% 100%, transparent 0%, rgba(0,255,255,0.3) 50%, transparent 100%);
+    -fx-border-color: linear-gradient(from 0% 100% to 100% 100%, transparent 0%, rgba(0,255,255,0.3) 50%, transparent 100%);
 }
 .combo-box > .list-cell,
 .combo-box:editable > .list-cell,
@@ -150,9 +150,13 @@
 .text-input:hover,
 .complex-text-field:hover {
     -fx-background-color: transparent-nct;
-    -fx-border-insets: 0 -1 0 -1;
+    -fx-background-insets: 1;
+    -fx-border-insets: -1;
     -fx-border-width: 1;
-    -fx-border-color: linear-gradient(from 0% 0% to 100% 100%, transparent 0%, rgba(0,255,255,0.3) 50%, transparent 100%);
+    -fx-border-color: linear-gradient(from 0% 100% to 100% 100%, transparent 0%, rgba(0,255,255,0.3) 50%, transparent 100%);
+}
+.text-input:hover {
+    -fx-border-insets: 0 -1 0 -1;
 }
 .combo-box-base:focused,
 .combo-box-base:editable:focused,
@@ -164,7 +168,11 @@
 .complex-text-field:focus-within,
 .complex-text-field:focused {
     -fx-background-color: -skin-color-darker;
-    -fx-border-insets: 0 -1 0 -1;
+    -fx-border-insets: -1;
     -fx-border-width: 1;
-    -fx-border-color: linear-gradient(from 0% 0% to 100% 100%, transparent 0%, rgba(0,255,255,0.3) 50%, transparent 100%);
+    -fx-border-color: linear-gradient(from 0% 100% to 100% 100%, transparent 0%, rgba(0,255,255,0.3) 50%, transparent 100%);
+}
+.text-input:focused,
+.text-input:readonly:focused {
+    -fx-border-insets: 0 -1 0 -1;
 }
